# Task_grades

./: CMakeLists.txt  README.md
src/commands/: ICommand.hpp
src/utils/: FileUtils.cpp  FileUtils.hpp
src/versioning/: Commit.cpp  Commit.hpp  StorageManager.cpp  StorageManager.hpp
